--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,141 +2,246 @@ name: Build and Push Snell Docker Image
 
 on:
   schedule:
+    # 每小时执行一次（UTC 时间，对应北京时间每小时整点）
     - cron: '0 * * * *'
   workflow_dispatch:
     inputs:
       version:
-        description: 'Snell 版本号（如 5.0.1，留空自动检测）'
+        description: 'Snell版本号（如：5.0.1，留空使用最新版本）'
         required: false
         type: string
       debian:
-        description: 'Debian 版本号（11 / 12 / 13）'
+        description: 'Debian版本（如：bookworm, bullseye, trixie）'
         required: false
-        default: '12'
+        default: 'bookworm'
         type: string
       alpine:
-        description: 'Alpine 版本（如 3.19 / latest）'
+        description: 'Alpine版本（如：latest, edge, 3.19, 3.18）'
         required: false
         default: 'latest'
         type: string
+      use_repo_files:
+        description: '使用仓库中的 Version 目录文件（如果存在）'
+        required: false
+        type: boolean
+        default: false
+      force:
+        description: '强制构建（即使版本已存在）'
+        required: false
+        type: boolean
+        default: false
 
 env:
-  IMAGE_NAME: snell
-  PLATFORMS: linux/amd64,linux/386,linux/arm64,linux/arm/v7
+  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+  GHCR_USERNAME: ${{ github.repository_owner }}
 
 jobs:
   check-version:
     runs-on: ubuntu-latest
     outputs:
-      snell_version: ${{ steps.detect.outputs.snell_version }}
-      should_build: ${{ steps.detect.outputs.should_build }}
-
+      version: ${{ steps.get_version.outputs.version }}
+      should_build: ${{ steps.check_build.outputs.should_build }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Login GHCR (for manifest inspect)
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Detect Snell Version
-        id: detect
-        shell: bash
-        env:
-          INPUT_VERSION: ${{ inputs.version }}
+      - name: 获取 Snell 版本
+        id: get_version
         run: |
-          set -euo pipefail
-
-          get_versions() {
-            curl -fsSL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell \
-              | grep -oE 'v[0-9]+\.[0-9]+\.[0-9]+([a-z0-9]+)?' \
-              | sort -V | uniq
-          }
-
-          is_prerelease() {
-            [[ "$1" =~ (alpha|beta|rc|b) ]]
-          }
-
-          check_download() {
-            local v="${1#v}"
-            curl -sI --max-time 10 \
-              "https://dl.nssurge.com/snell/snell-server-v${v}-linux-amd64.zip" \
-              | head -n1 | grep -q "200"
-          }
-
-          get_latest() {
-            for v in $(get_versions | sort -Vr); do
-              is_prerelease "$v" && continue
-              check_download "$v" && echo "$v" && return 0
-            done
-            return 1
-          }
-
-          if [ -z "${INPUT_VERSION:-}" ]; then
-            SNELL_VERSION="$(get_latest)"
+          if [ -n "${{ inputs.version }}" ]; then
+            VERSION="${{ inputs.version }}"
+            echo "✓ 使用指定版本: $VERSION"
           else
-            SNELL_VERSION="v${INPUT_VERSION#v}"
+            echo "→ 检测最新版本..."
+            # 从 Release Notes 页面提取版本号
+            VERSION=$(curl -sL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell | \
+              grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' | \
+              sort -Vru | head -n 1)
+            
+            if [ -z "$VERSION" ]; then
+              VERSION=$(curl -sL https://dl.nssurge.com/snell/ 2>/dev/null | \
+                grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' | \
+                sort -Vru | head -n 1)
+            fi
+            
+            if [ -z "$VERSION" ]; then
+              echo "✗ 无法获取版本号"
+              exit 1
+            fi
+            echo "✓ 检测到最新版本: $VERSION"
+          fi
+          
+          # 添加 v 前缀
+          echo "version=v${VERSION#v}" >> $GITHUB_OUTPUT
+
+      - name: 检查仓库中是否有该版本的文件
+        id: check_repo_files
+        run: |
+          VERSION="${{ steps.get_version.outputs.version }}"
+          USE_REPO="${{ inputs.use_repo_files }}"
+          
+          if [ "$USE_REPO" = "true" ] || [ -z "$USE_REPO" ]; then
+            # 检查是否有至少一个平台的文件
+            if ls Version/${VERSION}/snell-server-v${VERSION}-linux-*.zip 1> /dev/null 2>&1; then
+              echo "✓ 仓库中存在版本 ${VERSION} 的文件"
+              echo "has_files=true" >> $GITHUB_OUTPUT
+            else
+              echo "→ 仓库中不存在版本 ${VERSION} 的文件"
+              echo "has_files=false" >> $GITHUB_OUTPUT
+            fi
+          else
+            echo "→ 不使用仓库文件"
+            echo "has_files=false" >> $GITHUB_OUTPUT
           fi
 
-          [ -n "$SNELL_VERSION" ]
-
-          echo "→ Snell version: $SNELL_VERSION"
-
-          if docker manifest inspect \
-            ghcr.io/${{ github.repository_owner }}/snell:${SNELL_VERSION} \
-            >/dev/null 2>&1; then
+      - name: 检查是否需要构建
+        id: check_build
+        run: |
+          VERSION="${{ steps.get_version.outputs.version }}"
+          FORCE="${{ inputs.force }}"
+          
+          if [ "$FORCE" = "true" ]; then
+            echo "✓ 强制构建模式"
+            echo "should_build=true" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          
+          # 检查 GHCR 是否已存在该版本
+          if docker manifest inspect ghcr.io/${{ github.repository_owner }}/snell:${VERSION} >/dev/null 2>&1; then
+            echo "→ 版本 ${VERSION} 已存在于 GHCR"
             echo "should_build=false" >> $GITHUB_OUTPUT
           else
+            echo "✓ 版本 ${VERSION} 需要构建"
             echo "should_build=true" >> $GITHUB_OUTPUT
           fi
 
-          echo "snell_version=$SNELL_VERSION" >> $GITHUB_OUTPUT
-
-  build:
+  build-and-push:
     needs: check-version
     if: needs.check-version.outputs.should_build == 'true'
     runs-on: ubuntu-latest
-
+    timeout-minutes: 60
     strategy:
       matrix:
         base: [debian, alpine]
       fail-fast: false
-
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: docker/setup-qemu-action@v3
-      - uses: docker/setup-buildx-action@v3
-
-      - name: Login GHCR
-        uses: docker/login-action@v3
+      - name: Checkout 代码
+        uses: actions/checkout@v4
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
-      - name: Login Docker Hub
-        if: secrets.DOCKER_HUB_USERNAME != ''
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        if: env.DOCKER_HUB_USERNAME != ''
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Build and Push
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: 准备构建参数
+        id: prep
+        run: |
+          VERSION="${{ needs.check-version.outputs.version }}"
+          DEBIAN="${{ inputs.debian || 'bookworm' }}"
+          ALPINE="${{ inputs.alpine || 'latest' }}"
+          USE_REPO="${{ inputs.use_repo_files }}"
+          BASE="${{ matrix.base }}"
+          
+          # 检查是否使用仓库文件
+          if [ "$USE_REPO" = "true" ]; then
+            VERSION_NUM="${VERSION#v}"
+            if ls Version/${VERSION_NUM}/snell-server-v${VERSION_NUM}-linux-*.zip 1> /dev/null 2>&1; then
+              USE_LOCAL="true"
+              echo "✓ 将使用仓库中的文件"
+            else
+              USE_LOCAL="false"
+              echo "→ 仓库中无文件，将从官方下载"
+            fi
+          else
+            USE_LOCAL="false"
+            echo "→ 将从官方下载"
+          fi
+          
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "debian=$DEBIAN" >> $GITHUB_OUTPUT
+          echo "alpine=$ALPINE" >> $GITHUB_OUTPUT
+          echo "use_local=$USE_LOCAL" >> $GITHUB_OUTPUT
+          echo "base=$BASE" >> $GITHUB_OUTPUT
+          
+          # 构建镜像标签
+          GHCR_IMAGE="ghcr.io/${{ github.repository_owner }}/snell"
+          
+          if [ "$BASE" = "debian" ]; then
+            # Debian: version 和 latest
+            TAGS="${GHCR_IMAGE}:${VERSION},${GHCR_IMAGE}:latest"
+          else
+            # Alpine: version-alpine 和 alpine
+            TAGS="${GHCR_IMAGE}:${VERSION}-alpine,${GHCR_IMAGE}:alpine"
+          fi
+          
+          # 如果配置了 Docker Hub
+          if [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
+            DOCKER_HUB_IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/snell"
+            if [ "$BASE" = "debian" ]; then
+              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION},${DOCKER_HUB_IMAGE}:latest"
+            else
+              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION}-alpine,${DOCKER_HUB_IMAGE}:alpine"
+            fi
+          fi
+          
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
+          
+          echo ""
+          echo "📦 构建信息:"
+          echo "  基础镜像: $BASE"
+          echo "  版本: $VERSION"
+          echo "  Debian: $DEBIAN"
+          echo "  Alpine: $ALPINE"
+          echo "  使用仓库文件: $USE_LOCAL"
+          echo "  标签: $TAGS"
+
+      - name: 创建空 Version 目录（如果不存在）
+        run: |
+          mkdir -p Version
+          touch Version/.gitkeep
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ matrix.base == 'alpine' && 'Dockerfile.alpine' || 'Dockerfile' }}
-          platforms: ${{ env.PLATFORMS }}
+          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
           push: true
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/snell:${{ needs.check-version.outputs.snell_version }}${{ matrix.base == 'alpine' && '-alpine' || '' }}
-            ghcr.io/${{ github.repository_owner }}/snell:${{ matrix.base == 'alpine' && 'alpine' || 'latest' }}
-            ${{ secrets.DOCKER_HUB_USERNAME && format('{0}/snell:{1}{2}', secrets.DOCKER_HUB_USERNAME, needs.check-version.outputs.snell_version, matrix.base == 'alpine' && '-alpine' || '') || '' }}
-            ${{ secrets.DOCKER_HUB_USERNAME && format('{0}/snell:{1}', secrets.DOCKER_HUB_USERNAME, matrix.base == 'alpine' && 'alpine' || 'latest') || '' }}
+          tags: ${{ steps.prep.outputs.tags }}
           build-args: |
-            SNELL_VERSION=${{ needs.check-version.outputs.snell_version }}
-            DEBIAN_VERSION=${{ inputs.debian }}
-            ALPINE_VERSION=${{ inputs.alpine }}
+            SNELL_VERSION=${{ steps.prep.outputs.version }}
+            DEBIAN_VERSION=${{ steps.prep.outputs.debian }}
+            ALPINE_VERSION=${{ steps.prep.outputs.alpine }}
+            USE_LOCAL=${{ steps.prep.outputs.use_local }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: 构建摘要
+        run: |
+          echo "### ✅ 构建完成 (${{ matrix.base }})" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**版本:** ${{ steps.prep.outputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "**基础镜像:** ${{ matrix.base }}" >> $GITHUB_STEP_SUMMARY
+          echo "**构建方式:** ${{ steps.prep.outputs.use_local == 'true' && '使用仓库文件' || '官方下载' }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**镜像标签:**" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.prep.outputs.tags }}" | tr ',' '\n' >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
