--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,206 +1,79 @@
-name: Build and Push Snell Docker Image
+ARG BASE_VERSION=3.21
+FROM alpine:${BASE_VERSION} AS builder
 
-on:
-  schedule:
-    # 每小时执行一次（UTC 时间，对应北京时间每小时整点）
-    - cron: '0 * * * *'
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Snell版本号（如：5.0.1 或 v5.0.1，留空使用最新版本）'
-        required: false
-        type: string
-      debian_version:
-        description: 'Debian版本号（如：bookworm, trixie，留空使用 bookworm）'
-        required: false
-        type: string
-      alpine_version:
-        description: 'Alpine版本号（如：3.19, 3.20, 3.21，留空使用 3.21）'
-        required: false
-        type: string
-      force:
-        description: '强制构建（即使版本已存在）'
-        required: false
-        type: boolean
-        default: false
+ARG TARGETARCH
+ARG SNELL_VERSION
 
-env:
-  DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-  GHCR_USERNAME: ${{ github.repository_owner }}
+# 安装必要工具
+RUN apk add --no-cache ca-certificates wget unzip
 
-jobs:
-  check-version:
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.get_version.outputs.version }}
-      should_build: ${{ steps.check_build.outputs.should_build }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+# 创建工作目录
+RUN mkdir -p /tmp/snell
 
-      - name: 获取 Snell 版本
-        id: get_version
-        run: |
-          if [ -n "${{ inputs.version }}" ]; then
-            INPUT_VERSION="${{ inputs.version }}"
-            # 确保版本号有 v 前缀
-            VERSION="v${INPUT_VERSION#v}"
-            echo "✓ 使用指定版本: $VERSION"
-          else
-            echo "→ 检测最新版本..."
-            # 从官方 Release Notes 页面提取最新版本
-            LATEST_VERSION=$(curl -sL https://kb.nssurge.com/surge-knowledge-base/zh/release-notes/snell | \
-              grep -oP 'snell-server-v\K[0-9]+\.[0-9]+\.[0-9]+' | \
-              sort -Vru | head -n 1)
-            
-            if [ -z "$LATEST_VERSION" ]; then
-              echo "✗ 无法从官网获取版本号"
-              exit 1
-            fi
-            
-            VERSION="v${LATEST_VERSION}"
-            echo "✓ 检测到最新版本: $VERSION"
-          fi
-          
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+# 复制 Version 目录
+COPY Version /tmp/Version
 
-      - name: 检查是否需要构建
-        id: check_build
-        run: |
-          VERSION="${{ steps.get_version.outputs.version }}"
-          FORCE="${{ inputs.force }}"
-          
-          if [ "$FORCE" = "true" ]; then
-            echo "✓ 强制构建模式"
-            echo "should_build=true" >> $GITHUB_OUTPUT
-            exit 0
-          fi
-          
-          # 检查 GHCR 是否已存在该版本
-          if docker manifest inspect ghcr.io/${{ github.repository_owner }}/snell:${VERSION} >/dev/null 2>&1; then
-            echo "→ 版本 ${VERSION} 已存在于 GHCR"
-            echo "should_build=false" >> $GITHUB_OUTPUT
-          else
-            echo "✓ 版本 ${VERSION} 需要构建"
-            echo "should_build=true" >> $GITHUB_OUTPUT
-          fi
+# 下载或使用仓库中的 snell-server
+RUN set -ex && \
+    case "${TARGETARCH}" in \
+        amd64) ARCH="amd64" ;; \
+        386) ARCH="i386" ;; \
+        arm64) ARCH="aarch64" ;; \
+        arm/v7|arm) ARCH="armv7l" ;; \
+        *) echo "❌ Unsupported architecture: ${TARGETARCH}" && exit 1 ;; \
+    esac && \
+    echo "→ Snell Version: ${SNELL_VERSION}, Arch: ${ARCH}" && \
+    DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-${SNELL_VERSION}-linux-${ARCH}.zip" && \
+    REPO_FILE="/tmp/Version/${SNELL_VERSION}/snell-server-${SNELL_VERSION}-linux-${ARCH}.zip" && \
+    echo "→ 尝试官方下载: ${DOWNLOAD_URL}" && \
+    if wget --timeout=30 --tries=3 -O /tmp/snell.zip "${DOWNLOAD_URL}" 2>&1; then \
+        echo "✓ 官方下载成功"; \
+    else \
+        echo "⚠️ 官方下载失败，尝试使用仓库文件"; \
+        if [ -f "${REPO_FILE}" ]; then \
+            echo "✓ 使用仓库文件: ${REPO_FILE}"; \
+            cp "${REPO_FILE}" /tmp/snell.zip; \
+        else \
+            echo "❌ 构建失败：官方下载失败且仓库中无备份文件"; \
+            echo "提示：请在 Version/${SNELL_VERSION}/ 目录下添加 snell 文件"; \
+            exit 1; \
+        fi; \
+    fi && \
+    unzip /tmp/snell.zip -d /tmp/snell && \
+    chmod +x /tmp/snell/snell-server && \
+    echo "✓ Snell Server 准备完成"
 
-  build-and-push:
-    needs: check-version
-    if: needs.check-version.outputs.should_build == 'true'
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    strategy:
-      matrix:
-        base: [debian, alpine]
-      fail-fast: false
-    steps:
-      - name: Checkout 代码
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+# 最终运行镜像 - 使用 glibc 兼容层
+FROM alpine:${BASE_VERSION}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+ARG SNELL_VERSION
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+LABEL org.opencontainers.image.source="https://github.com/yourusername/snell-docker"
+LABEL org.opencontainers.image.description="Snell Server (Alpine with glibc)"
+LABEL org.opencontainers.image.version="${SNELL_VERSION}"
 
-      - name: Log in to Docker Hub
-        if: env.DOCKER_HUB_USERNAME != ''
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+# 安装 glibc 兼容层和其他运行时依赖
+# Snell 是用 glibc 编译的，在 Alpine (musl) 上需要 gcompat
+RUN apk add --no-cache \
+    ca-certificates \
+    libstdc++ \
+    libgcc \
+    gcompat \
+    openssl
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+# 创建工作目录
+RUN mkdir -p /snell
 
-      - name: 准备构建参数
-        id: prep
-        run: |
-          VERSION="${{ needs.check-version.outputs.version }}"
-          BASE="${{ matrix.base }}"
-          
-          # 确定基础镜像版本
-          if [ "$BASE" = "debian" ]; then
-            if [ -n "${{ inputs.debian_version }}" ]; then
-              BASE_VERSION="${{ inputs.debian_version }}"
-            else
-              BASE_VERSION="bookworm"
-            fi
-          else
-            if [ -n "${{ inputs.alpine_version }}" ]; then
-              BASE_VERSION="${{ inputs.alpine_version }}"
-            else
-              BASE_VERSION="3.21"
-            fi
-          fi
-          
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "base=$BASE" >> $GITHUB_OUTPUT
-          echo "base_version=$BASE_VERSION" >> $GITHUB_OUTPUT
-          
-          # 构建镜像标签
-          GHCR_IMAGE="ghcr.io/${{ github.repository_owner }}/snell"
-          
-          if [ "$BASE" = "debian" ]; then
-            # Debian: version 和 latest
-            TAGS="${GHCR_IMAGE}:${VERSION},${GHCR_IMAGE}:latest"
-          else
-            # Alpine: version-alpine 和 alpine
-            TAGS="${GHCR_IMAGE}:${VERSION}-alpine,${GHCR_IMAGE}:alpine"
-          fi
-          
-          # 如果配置了 Docker Hub
-          if [ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]; then
-            DOCKER_HUB_IMAGE="${{ secrets.DOCKER_HUB_USERNAME }}/snell"
-            if [ "$BASE" = "debian" ]; then
-              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION},${DOCKER_HUB_IMAGE}:latest"
-            else
-              TAGS="${TAGS},${DOCKER_HUB_IMAGE}:${VERSION}-alpine,${DOCKER_HUB_IMAGE}:alpine"
-            fi
-          fi
-          
-          echo "tags=$TAGS" >> $GITHUB_OUTPUT
-          
-          echo ""
-          echo "📦 构建信息:"
-          echo "  基础镜像: $BASE:$BASE_VERSION"
-          echo "  Snell 版本: $VERSION"
-          echo "  标签: $TAGS"
+# 从构建阶段复制文件
+COPY --from=builder /tmp/snell/snell-server /snell/snell-server
+COPY entrypoint.sh /snell/entrypoint.sh
 
-      - name: 创建空 Version 目录
-        run: |
-          mkdir -p Version
-          touch Version/.gitkeep
+# 设置执行权限
+RUN chmod +x /snell/entrypoint.sh /snell/snell-server
 
-      - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ${{ matrix.base == 'alpine' && 'Dockerfile.alpine' || 'Dockerfile' }}
-          platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7
-          push: true
-          tags: ${{ steps.prep.outputs.tags }}
-          build-args: |
-            SNELL_VERSION=${{ steps.prep.outputs.version }}
-            BASE_VERSION=${{ steps.prep.outputs.base_version }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+WORKDIR /snell
 
-      - name: 构建摘要
-        run: |
-          echo "### ✅ 构建完成 (${{ matrix.base }})" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Snell 版本:** ${{ steps.prep.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-          echo "**基础镜像:** ${{ matrix.base }}:${{ steps.prep.outputs.base_version }}" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**镜像标签:**" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          echo "${{ steps.prep.outputs.tags }}" | tr ',' '\n' >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
+EXPOSE 20000
+
+# 使用 root 用户运行（egress-interface 需要 root 权限）
+ENTRYPOINT ["/snell/entrypoint.sh"]
