--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -22,9 +22,11 @@ RUN set -ex && \
         arm/v7|arm) ARCH="armv7l" ;; \
         *) echo "❌ Unsupported architecture: ${TARGETARCH}" && exit 1 ;; \
     esac && \
-    echo "→ Snell Version: ${SNELL_VERSION}, Arch: ${ARCH}" && \
-    DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-${SNELL_VERSION}-linux-${ARCH}.zip" && \
-    REPO_FILE="/tmp/Version/${SNELL_VERSION}/snell-server-${SNELL_VERSION}-linux-${ARCH}.zip" && \
+    VERSION="${SNELL_VERSION#v}" && \
+    VERSION_WITH_V="v${VERSION}" && \
+    echo "→ Snell Version: ${VERSION_WITH_V}, Arch: ${ARCH}" && \
+    DOWNLOAD_URL="https://dl.nssurge.com/snell/snell-server-${VERSION_WITH_V}-linux-${ARCH}.zip" && \
+    REPO_FILE="/tmp/Version/${VERSION_WITH_V}/snell-server-${VERSION_WITH_V}-linux-${ARCH}.zip" && \
     echo "→ 尝试官方下载: ${DOWNLOAD_URL}" && \
     if wget --timeout=30 --tries=3 -O /tmp/snell.zip "${DOWNLOAD_URL}" 2>&1; then \
         echo "✓ 官方下载成功"; \
@@ -35,7 +37,7 @@ RUN set -ex && \
             cp "${REPO_FILE}" /tmp/snell.zip; \
         else \
             echo "❌ 构建失败：官方下载失败且仓库中无备份文件"; \
-            echo "提示：请在 Version/${SNELL_VERSION}/ 目录下添加 snell 文件"; \
+            echo "提示：请在 Version/${VERSION_WITH_V}/ 目录下添加 snell 文件"; \
             exit 1; \
         fi; \
     fi && \
@@ -46,7 +48,6 @@ RUN set -ex && \
 # 最终运行镜像
 FROM alpine:${BASE_VERSION}
 
-# 重要：在新的构建阶段必须重新声明 ARG
 ARG TARGETARCH
 ARG SNELL_VERSION
 
@@ -54,13 +55,12 @@ LABEL org.opencontainers.image.source="https://github.com/yourusername/snell-doc
 LABEL org.opencontainers.image.description="Snell Server (Alpine)"
 LABEL org.opencontainers.image.version="${SNELL_VERSION}"
 
-# 安装运行时依赖和 glibc
-RUN apk add --no-cache \
-    ca-certificates \
-    wget \
-    tini \
-    gcompat \
-    libstdc++ && \
+# 安装基础依赖并下载安装 glibc
+RUN apk add --no-cache ca-certificates wget tini gcompat libstdc++
+
+# 分开安装 glibc（更容易调试）
+RUN set -ex && \
+    echo "→ Target Architecture: ${TARGETARCH}" && \
     case "${TARGETARCH}" in \
         amd64) \
             GLIBC_URL="https://repo.tlle.eu.org/alpine/v3.20/main/x86_64/glibc-2.36-r1.apk"; \
@@ -83,11 +83,15 @@ RUN apk add --no-cache \
             exit 1; \
             ;; \
     esac && \
-    wget -q -O /tmp/glibc.apk "$GLIBC_URL" && \
-    wget -q -O /tmp/glibc-bin.apk "$GLIBC_BIN_URL" && \
+    echo "→ Downloading glibc from: ${GLIBC_URL}" && \
+    wget -O /tmp/glibc.apk "$GLIBC_URL" && \
+    echo "→ Downloading glibc-bin from: ${GLIBC_BIN_URL}" && \
+    wget -O /tmp/glibc-bin.apk "$GLIBC_BIN_URL" && \
+    echo "→ Installing glibc packages..." && \
     apk add --no-cache --allow-untrusted --force-overwrite /tmp/glibc.apk /tmp/glibc-bin.apk && \
     rm -f /tmp/*.apk && \
-    apk del wget
+    apk del wget && \
+    echo "✓ glibc installed successfully"
 
 # 创建工作目录
 RUN mkdir -p /snell
