--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,11 @@ on:
         required: false
         type: string
       debian_version:
-        description: 'Debian版本号（如：bookworm, trixie，留空使用 bookworm）'
+        description: 'Debian版本号（如：bookworm, trixie，留空使用 latest）'
         required: false
         type: string
       alpine_version:
-        description: 'Alpine版本号（如：3.19, 3.20, 3.21，留空使用 3.21）'
+        description: 'Alpine-glibc版本号（如：alpine-3.19, edge，留空使用 edge）'
         required: false
         type: string
       force:
@@ -133,13 +133,13 @@ jobs:
             if [ -n "${{ inputs.debian_version }}" ]; then
               BASE_VERSION="${{ inputs.debian_version }}"
             else
-              BASE_VERSION="bookworm"
+              BASE_VERSION="latest"
             fi
           else
             if [ -n "${{ inputs.alpine_version }}" ]; then
               BASE_VERSION="${{ inputs.alpine_version }}"
             else
-              BASE_VERSION="3.21"
+              BASE_VERSION="edge"
             fi
           fi
           
